CHATS_SIT/force-app/main/default/objects/sfsit_t_adjmt_pmt_hist__x.object
<CustomObject>
    <description>sfsit$t_adjmt_pmt_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_adjmt_pmt_hist</externalName>
    <fields>
        <fullName>amt_pmt_adjmt__c</fullName>
        <description>amt_pmt_adjmt</description>
        <externalDeveloperName>amt_pmt_adjmt</externalDeveloperName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_pmt_srplus_adjmt__c</fullName>
        <description>amt_pmt_srplus_adjmt</description>
        <externalDeveloperName>amt_pmt_srplus_adjmt</externalDeveloperName>
        <label>Surplus Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_action_admin__c</fullName>
        <description>cde_action_admin</description>
        <externalDeveloperName>cde_action_admin</externalDeveloperName>
        <label>Administrative Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_pmt_adjmt__c</fullName>
        <description>cde_type_pmt_adjmt</description>
        <externalDeveloperName>cde_type_pmt_adjmt</externalDeveloperName>
        <label>Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_pmt_adjmt__c</fullName>
        <description>dte_pmt_adjmt</description>
        <externalDeveloperName>dte_pmt_adjmt</externalDeveloperName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_plan_pmt__c</fullName>
        <description>idn_plan_pmt</description>
        <externalDeveloperName>idn_plan_pmt</externalDeveloperName>
        <label>Payment Plan ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_pmt__c</fullName>
        <description>idn_pmt</description>
        <externalDeveloperName>idn_pmt</externalDeveloperName>
        <label>Payment Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_pmt_adjmt__c</fullName>
        <description>idn_pmt_adjmt</description>
        <externalDeveloperName>idn_pmt_adjmt</externalDeveloperName>
        <label>Payment Adjust ID</label>
        <length>50</length>
        <referenceTargetField>T_ADJMT_PMT__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_ADJMT_PMT__c</referenceTo>
        <relationshipLabel>Adjustment Payment Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_adjmt_pmt_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_pmt_adjmt_hist__c</fullName>
        <description>idn_pmt_adjmt_hist</description>
        <externalDeveloperName>idn_pmt_adjmt_hist</externalDeveloperName>
        <label>Payment Adjust Hist ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_pmt_cdor__c</fullName>
        <description>idn_pmt_cdor</description>
        <externalDeveloperName>idn_pmt_cdor</externalDeveloperName>
        <label>CDOR Payment ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_pmt_ebt__c</fullName>
        <description>idn_pmt_ebt</description>
        <externalDeveloperName>idn_pmt_ebt</externalDeveloperName>
        <label>EBT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_provr__c</fullName>
        <description>idn_provr</description>
        <externalDeveloperName>idn_provr</externalDeveloperName>
        <label>Provider ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_rcpt_pmt__c</fullName>
        <description>idn_rcpt_pmt</description>
        <externalDeveloperName>idn_rcpt_pmt</externalDeveloperName>
        <label>Recipient Payment ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_adjmt_pmt_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_info_other__c</fullName>
        <description>txt_info_other</description>
        <externalDeveloperName>txt_info_other</externalDeveloperName>
        <label>Other Info</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>txt_nbr_check_pmt__c</fullName>
        <description>txt_nbr_check_pmt</description>
        <externalDeveloperName>txt_nbr_check_pmt</externalDeveloperName>
        <label>Payment Check Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Adjustment Payment History</label>
    <pluralLabel>Adjustment Payment History</pluralLabel>
</CustomObject>